<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.fMarket.app.ui.vm.SignUpVm" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_app"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/content_padding"
            android:theme="@style/Toolbar.White"
            app:contentInsetStart="@dimen/content_padding">

            <include
                layout="@layout/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:subtitle="@{@string/label_sign_up_desc}"
                app:title="@{@string/label_sign_up}" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/content_padding"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/content_padding">

            <TextView
                style="@style/Text.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:text="@string/label_full_name" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/hint_full_name"
                android:text="" />

            <TextView
                style="@style/Text.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content"
                android:text="@string/label_email_address" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/hint_email"
                android:text="" />

            <TextView
                style="@style/Text.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content"
                android:text="@string/label_password" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:hint="@string/hint_password"
                android:text="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_sign_up"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:text="@string/action_continue"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</layout>