<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.fMarket.app.ui.vm.SignInVm" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_app"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/content_padding"
                android:theme="@style/Toolbar.White"
                app:contentInsetStart="@dimen/content_padding">

                <include
                    layout="@layout/layout_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:subtitle="@{@string/label_sign_in_desc}"
                    app:title="@{@string/label_sign_in}" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/content_padding"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/content_padding">

                <TextView
                    style="@style/Text.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:text="@string/label_email_address" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:hint="@string/hint_email"
                    android:text="@={vm.email}" />

                <TextView
                    style="@style/Text.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content"
                    android:text="@string/label_password" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:hint="@string/hint_password"
                    android:text="@={vm.password}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/b_sign_in"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:text="@string/label_sign_in"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/b_sign_up"
                    style="@style/Button.Gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_small"
                    android:text="@string/action_sign_up"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>