<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.movieApp.app.ui.vm.MovieDetailVm" />
    </data>

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:displayedChild="@{vm.state}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"

                    android:theme="@style/Toolbar.White" />

                <TextView
                    style="@style/Text.Toolbar"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/labelMovieInformation" />
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/content"
                    android:paddingEnd="@dimen/content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardUseCompatPadding="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_movie_height"
                            android:scaleType="centerCrop"
                            app:srcUrl="@{vm.movie.image}"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/Text.HeadlineBig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content"
                        android:text="@{vm.movie.originalTitle}" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/rb_rating"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginVertical="@dimen/space"
                        android:rating="@{vm.movie.rate}"
                        android:numStars="5"
                        android:stepSize="0.1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        app:adapter="@{vm.genreAdapter}"
                        app:verticalOrientation="@{false}" />

                    <TextView
                        style="@style/Text.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_big"
                        android:layout_marginBottom="@dimen/content_small"
                        android:text="@string/labelSynopsis" />

                    <TextView
                        style="@style/Text.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{vm.movie.overview}" />

                    <TextView
                        style="@style/Text.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_big"
                        android:layout_marginBottom="@dimen/content_small"
                        android:text="@string/labelVideos" />

                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:displayedChild="@{vm.stateVideos}">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            app:adapter="@{vm.videoAdapter}"
                            app:verticalOrientation="@{false}" />

                        <include layout="@layout/layout_progress" />

                        <include
                            layout="@layout/layout_no_data"
                            app:text="@{vm.onFailed}" />
                    </ViewFlipper>

                    <TextView
                        style="@style/Text.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_small"
                        android:layout_marginTop="@dimen/content_big"
                        android:layout_marginEnd="@dimen/content_small"
                        android:layout_marginBottom="@dimen/content_small"
                        android:text="@string/labelReviews" />

                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:displayedChild="@{vm.stateReviews}">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            app:adapter="@{vm.reviewAdapter}"
                            app:verticalOrientation="@{true}"
                            tools:listitem="@layout/item_review" />

                        <include layout="@layout/layout_progress" />

                        <include
                            layout="@layout/layout_no_data"
                            app:text="@{vm.onFailed}" />
                    </ViewFlipper>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <include
            android:id="@+id/progress"
            layout="@layout/layout_progress" />

        <include
            layout="@layout/layout_no_data"
            app:text="@{vm.onFailed}" />
    </ViewFlipper>
</layout>